--- a/views/option.ejs
+++ b/views/option.ejs
@@ -4,21 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp Form - MongoDB</title>
+    <title>🔀 Option</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
+
 </head>
 
 <body>
     
     
-     <img class="image" width="100%" height="585px" src="intro2.gif">
+     <img class="image" width="100%" height="100%" src="/images/intro2.gif">
     <div class="container">
     <header class="header">
-		<h1 class="logo"> <img width="45px" src="Automation.png"></h1>
+		<h1 class="logo"> <img width="45px" src="/images/Automation.png"></h1>
       <ul class="main-nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -27,14 +29,14 @@
 	</header> 
         <div class="row">
           
-        <h2> <img width="50px" style="border-radius: 30px; font-weight: bold" src="user2.png"> Hi <%= user %> !</h2>
+        <h2> <img width="50px" style="border-radius: 30px; font-weight: bold" src="/images/user2.png"> Hi <%= user %> !</h2>
         <i class="fas fa-user fa-2x"></i>
-        <a href="configure.html" class="button38"><figure><img width="450px" src="Wants_To_Configure_Docker.gif"></figure>
+        <a href="/pages/configure.html" class="button38"><figure><img width="450px" src="/images/Wants_To_Configure_Docker.gif"></figure>
             <div class="text">
               Wanna Configure Docker
             </div>
         </a>
-        <a href="/control" class="button38" style="margin-left: 200px;"><figure><img width="450px" height="282px" src="Control_Docker.png"></figure>
+        <a href="/control" class="button38" style="margin-left: 200px;"><figure><img width="450px" height="282px" src="/images/Control_Docker.png"></figure>
             <div class="text">
               Wanna Control Docker
             </div>
