--- a/views/pull.ejs
+++ b/views/pull.ejs
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp Form - MongoDB</title>
+    <title>🖥Controller</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
 </head>
 
 <body>
     
     
-     <img class="image" width="100%"  src="intro2.gif">
+     <img class="image" width="100%"  src="/images/intro2.gif">
     <div class="container">
     <header class="header">
-		<h1 class="logo"> <img width="45px" src="Automation.png"></h1>
+		<h1 class="logo"> <img width="45px" src="/images/Automation.png"></h1>
       <ul class="main-nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -27,11 +28,11 @@
 	</header> 
         <h1>Control Docker of <%= mip %> Address</h1>
         <div class="row_float">
-            <a  href="option.html" ><button style="margin-left: 10px; float:left" class="btn fourth">Pull Image</button></a>
-            <a  href="option.html" ><button style="margin-left: 50px" class="btn fourth">List Container</button></a>
-            <a  href="option.html" ><button style="margin-left: 10px; float:left" class="btn fourth">List Images</button></a>
-            <a  href="option.html" ><button style="margin-left: 0px; float:left" class="btn fourth">Fetch details about specific container</button></a>
-            <a  href="new.html" ><button style="margin-left: 10px; margin-top: 10px" class="btn fourth">Deploy</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 60%;" class="btn fourth bold_btn">Pull Image</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 52%;" class="btn fourth">List Container</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 58%;" class="btn fourth">List Images</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 4%;" class="btn fourth">Fetch details about specific container</button></a>
+            <a  href="/pages/new.html" ><button style="padding-right: 68%;" class="btn fourth">Deploy</button></a>
         </div>
         <div class="container1">
             <h3>Console</h3>
