--- a/views/net.ejs
+++ b/views/net.ejs
@@ -4,20 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💽MachineIP</title>
+    <title>🖥Controller</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
-        <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
-
+    <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
 </head>
 
 <body>
     
     
-     <img class="image" width="100%" height="100%" src="/images/intro2.gif">
+     <img class="image" width="100%"  src="/images/intro2.gif">
     <div class="container">
     <header class="header">
 		<h1 class="logo"> <img width="65px" src="/images/Automation.png"></h1>
@@ -27,17 +26,21 @@
           <li><a href="#">Documentation</a></li>
       </ul>
 	</header> 
-   
-        <div class="form">
-          
-            <form action="/pull" method="POST">
-                    <h4><b>Machine IP</b></h4>
-                    <input style="color: black" type="text" class="box" id="email" name="machineip" placeholder="Enter New Machine IP to add" autocomplete="off" />
-                    <br>
-                    <input style="width:5%;"class="first btn" type="submit" value="➕" id="submit" />
-            </form>
+    <div class="machinIp">
+        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi User !</h3>
+        <h3 class="machinIp_txt">🔌 Conected With <strong style="color:greenyellow;"><%= mip %></strong> Machine </h3>
+    </div>
+    <div style="padding-top: 5%;">
+        <div class="row_float">
+            <a  href="/pages/option.html" ><button style="padding-right: 55%;" class="btn fourth bold_btn">List Network</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 50%;" class="btn fourth">Create Network</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 8%;" class="btn fourth">Capture the Internal IP of Container</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 17%;" class="btn fourth">Deploy Container By the Static IP</button></a>
         </div>
-
+        <div class="container1">
+            <h3>Console</h3>
+        </div>
+    </div>
 </body>
 
 </html>
