--- a/views/option.ejs
+++ b/views/option.ejs
@@ -17,10 +17,10 @@
 <body>
     
     
-     <img class="image" width="100%" height="100%" src="/images/intro2.gif">
+     <img class="image" width="100%" height="1080rem" src="/images/intro2.gif">
     <div class="container">
     <header class="header">
-		<h1 class="logo"> <img width="45px" src="/images/Automation.png"></h1>
+		<h1 class="logo"> <img width="65px" src="/images/Automation.png"></h1>
       <ul class="main-nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -30,17 +30,28 @@
         <div class="row">
           
         <h2> <img width="50px" style="border-radius: 30px; font-weight: bold" src="/images/user2.png"> Hi <%= user %> !</h2>
-        <i class="fas fa-user fa-2x"></i>
-        <a href="/pages/configure.html" class="button38"><figure><img width="450px" src="/images/Wants_To_Configure_Docker.gif"></figure>
-            <div class="text">
-              Wanna Configure Docker
+        
+        <a href="/pages/configure.html">
+          <div class="container2">
+              <img style="opacity: 60%;"  width="500px" height="300px" src="/images/Wants_To_Configure_Docker.gif">
+            
+              <div class="centered2"><h1 style="font-weight: 600;">Configure Docker  </h1></div>
+              
             </div>
-        </a>
-        <a href="/control" class="button38" style="margin-left: 200px;"><figure><img width="450px" height="282px" src="/images/Control_Docker.png"></figure>
-            <div class="text">
-              Wanna Control Docker
-            </div>
-        </a>
+      </a>
+      <a href="/control">
+        <div style="margin-left: 100px;" class="container2">
+            <img style="opacity: 60%;"  width="500px" height="300px" src="/images/Control_Docker.png">
+            <div class="centered2"><h1 style="font-weight: 600;">Control Docker</h1></div>
+        </div>
+    </a>
+        <a href="">
+          <div style=" margin-top: 70px;" class="container2">
+              <img style="opacity: 60%;"  width="500px" height="300px" src="/images/serverless.jpg">
+            
+              <div class="centered2"><h1 style="font-weight: 600;">Serverless</h1></div>
+          </div>
+      </a>
 
         </div>
 
