--- a/views/pull.ejs
+++ b/views/pull.ejs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🖥Controller</title>
-
+    <title>👩‍💻Services</title>
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
@@ -14,29 +14,64 @@
 </head>
 
 <body>
+    <div style="background-color: black;">
     
-    
-     <img class="image" width="100%"  src="/images/intro2.gif">
+     <!-- <img class="image" width="100%"  src="/images/intro2.gif"> -->
     <div class="container">
     <header class="header">
-		<h1 class="logo"> <img width="45px" src="/images/Automation.png"></h1>
+		<h1 class="logo"> <img width="65px" src="/images/Automation.png"></h1>
       <ul class="main-nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Documentation</a></li>
       </ul>
 	</header> 
-        <h1>Control Docker of <%= mip %> Address</h1>
-        <div class="row_float">
-            <a  href="/pages/option.html" ><button style="padding-right: 60%;" class="btn fourth bold_btn">Pull Image</button></a>
-            <a  href="/pages/option.html" ><button style="padding-right: 52%;" class="btn fourth">List Container</button></a>
-            <a  href="/pages/option.html" ><button style="padding-right: 58%;" class="btn fourth">List Images</button></a>
-            <a  href="/pages/option.html" ><button style="padding-right: 4%;" class="btn fourth">Fetch details about specific container</button></a>
-            <a  href="/pages/new.html" ><button style="padding-right: 68%;" class="btn fourth">Deploy</button></a>
+    <div class="machinIp">
+        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi User !</h3>
+        <h3 class="machinIp_txt">🔌 Conected With <strong style="color:greenyellow;"><%= mip %></strong> Machine </h3>
+    </div>
+    <div style="padding-top: 5%;">
+      
+        <a href="/img-ser">
+            <div style=" float:left;" class="container2">
+                <img style="opacity: 50%;" width="300px" height="300px" src="/images/image-ser.jpg">
+              
+                <div style="font-weight: bold; font-size: 2rem" class="centered3">Image Service</div>
+            </div>
+        </a>
+        
+        <a href="/cont-ser">
+            <div style="float: left;" class="container2">
+                <img style="opacity: 50%; margin-left: 60px" width="300px" height="300px" src="/images/docker-container.jpg">
+              
+                <div style="font-weight: bold; font-size: 2rem" class="centered">Container Service</div>
+            </div>
+        </a>
+        <a  href="/vol-ser">
+            <div style="margin-left: 60px" class="container2">
+                <img style="opacity: 50%;" width="300px" height="300px" src="/images/docker-storage.jpg">
+              
+                <div style="font-weight: bold; font-size: 2rem" class="centered1">Volume Service</div>
+            </div>
+        </a>
+        <br>
+        <a href="/img-build-ser">
+            <div style=" margin-top: 40px;" class="container2">
+                <img style="opacity: 50%;"  width="300px" height="300px" src="/images/docker_build.jpg">
+              
+                <div style="font-weight: bold;  font-size: 2rem;" class="centered2">Image Builder Service</div>
+            </div>
+        </a>
+        <a href="/net-ser">
+            <div style=" float:left; margin-top: 40px; margin-left: 60px" class="container2">
+                <img style="opacity: 50%;" width="300px" height="300px" src="/images/docker_network.png">
+              
+                <div style="font-weight: bold; font-size: 2rem" class="centered3">Network Service</div>
+            </div>
+        </a>
         </div>
-        <div class="container1">
-            <h3>Console</h3>
-        </div>
+    </div>
 </body>
 
 </html>
+
