--- a/views/cont.ejs
+++ b/views/cont.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🕹 Deploy</title>
+    <title>🖥Controller</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
 <body>
     
     
-     <img class="image" width="100%" height="100%" src="/images/intro2.gif">
+     <img class="image" width="100%"  src="/images/intro2.gif">
     <div class="container">
     <header class="header">
 		<h1 class="logo"> <img width="65px" src="/images/Automation.png"></h1>
@@ -26,21 +26,23 @@
           <li><a href="#">Documentation</a></li>
       </ul>
 	</header> 
-        <div class="form1">
-            <form action="/configure" method="POST">
-                    <h4><b>Docker Image Name</b></h4>
-                    <input style="color: black" type="text" class="box" name="machineip" placeholder="Enter image name" autocomplete="off" />
-                    <br>
-                    <h4><b>Port Number</b></h4>
-                    <input style="color: black" type="text" class="box" name="username" placeholder="Enter Port Number" autocomplete="off" />
-                    <br>
-                    <input  class="first btn" type="submit" value="Deploy" id="submit" />
-                    
-            </form>
+    <div class="machinIp">
+        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi User !</h3>
+        <h3 class="machinIp_txt">🔌 Conected With <strong style="color:greenyellow;"><%= mip %></strong> Machine </h3>
+    </div>
+    <div style="padding-top: 5%;">
+        <div class="row_float">
+            <a  href="/pages/option.html" ><button style="padding-right: 75%;" class="btn fourth bold_btn">List Container</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 63%;" class="btn fourth">Inspect Container</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 70%;" class="btn fourth">Stop Container</button></a>
+            <a  href="/pages/option.html" ><button style="padding-right: 68%;" class="btn fourth">Start Container</button></a>
+            <a  href="/pages/new.html" ><button style="padding-right: 62%;" class="btn fourth">Logs of Container</button></a>
+            <a  href="/pages/new.html" ><button style="padding-right: 100%;" class="btn fourth">Deploy</button></a>
         </div>
-        <div  class="container1">
+        <div class="container1">
             <h3>Console</h3>
         </div>
+    </div>
 </body>
 
 </html>
