connected with API

--- a/views/pull.ejs
+++ b/views/pull.ejs
@@ -25,9 +25,10 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Documentation</a></li>
       </ul>
-	</header> 
+	</header>
+    <div style="padding-top: 4%;">
     <div class="machinIp">
-        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi User !</h3>
+        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi <%= userN %> !</h3>
         <h3 class="machinIp_txt">🔌 Conected With <strong style="color:greenyellow;"><%= mip %></strong> Machine </h3>
     </div>
     <div style="padding-top: 5%;">
@@ -70,6 +71,7 @@
             </div>
         </a>
         </div>
+    </div>
     </div>
 </body>
 
