--- a/views/image_build.ejs
+++ b/views/image_build.ejs
@@ -26,8 +26,9 @@
           <li><a href="#">Documentation</a></li>
       </ul>
 	</header>
+    <div style="padding-top: 4%;">
     <div class="machinIp">
-        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi User !</h3>
+        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi <%= userN %> !</h3>
         <h3 class="machinIp_txt">🔌 Conected With <strong style="color:greenyellow;"><%= mip %></strong> Machine </h3>
     </div> 
     <div style="padding-top: 5%;">
@@ -42,6 +43,7 @@
         <div class="container1">
             <h3>Console</h3>
         </div>
+    </div>
     </div>
     </div>
 </body>
