--- a/views/img.ejs
+++ b/views/img.ejs
@@ -11,12 +11,204 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="shortcut icon" type="image/png" href="/images/Automation.png"/>
+    <script>
+        function check_empty() {
+          if (document.getElementById('name').value == "" || document.getElementById('email').value == "" || document.getElementById('msg').value == "") {
+          alert("Fill All Fields !");
+          } else {
+          document.getElementById('form').submit();
+          alert("Form Submitted Successfully...");
+          }
+          }
+          //Function To Display Popup
+          function div_show() {
+            document.getElementById('abc').style.display = "block";
+          }
+          function div_show1() {
+            document.getElementById('abcd').style.display = "block";
+          }
+          function div_show2() {
+            document.getElementById('abcde').style.display = "block";
+          }
+          function div_show3() {
+              document.getElementById('abcdef').style.display = "block";
+          }
+          function div_show4() {
+            document.getElementById('abcdefg').style.display = "block";
+          }
+          //Function to Hide Popup
+          function div_hide(){
+          document.getElementById('abc').style.display = "none";
+          }
+          function div_hide1(){
+            document.getElementById('abcd').style.display = "none";
+          }
+          function div_hide2(){
+            document.getElementById('abcde').style.display = "none";
+            }
+          function div_hide3(){
+            document.getElementById('abcdef').style.display = "none";
+          }
+          function div_hide4(){
+            document.getElementById('abcdefg').style.display = "none";
+          }
+      </script>
+      <style>
+        body{
+          background-color: black;
+        }
+        #abc {
+          width:100%;
+          height:100%;
+          opacity:.95;
+          top:0;
+          left:0;
+          display:none;
+          position:fixed;
+          background-color:#313131;
+          overflow:auto
+          }
+          #abcd {
+            width:100%;
+            height:100%;
+            opacity:.95;
+            top:0;
+            left:0;
+            display:none;
+            position:fixed;
+            background-color:#313131;
+            overflow:auto
+          }
+          #abcde {
+            width:100%;
+            height:100%;
+            opacity:.95;
+            top:0;
+            left:0;
+            display:none;
+            position:fixed;
+            background-color:#313131;
+            overflow:auto
+          }
+          #abcdef {
+            width:100%;
+            height:100%;
+            opacity:.95;
+            top:0;
+            left:0;
+            display:none;
+            position:fixed;
+            background-color:#313131;
+            overflow:auto
+          }
+          #abcdefg {
+            width:100%;
+            height:100%;
+            opacity:.95;
+            top:0;
+            left:0;
+            display:none;
+            position:fixed;
+            background-color:#313131;
+            overflow:auto
+          }
+          img#close {
+          position:absolute;
+          right:-14px;
+          top:-14px;
+          cursor:pointer
+          }
+          div#popupContact {
+          position:absolute;
+          left:50%;
+          top:17%;
+          margin-left:-202px;
+          font-family:'Raleway',sans-serif
+          }
+          form {
+          position: relative;
+          width:700px;
+          padding:10px 50px;
+          border:2px solid gray;
+          border-radius:10px;
+          font-family:raleway;
+          background-color:#fff
+          }
+          p {
+          margin-top:30px
+          }
+          h2 {
+          background-color:#FEFFED;
+          padding:20px 35px;
+          margin:-10px -50px;
+          text-align:center;
+          border-radius:10px 10px 0 0
+          }
+          hr {
+          margin:10px -50px;
+          border:0;
+          border-top:1px solid #ccc
+          }
+          input[type=text] {
+            color: black;
+          width:100%;
+          padding:10px;
+          margin-top:30px;
+          border:1px solid #ccc;
+          padding-left:40px;
+          font-size:16px;
+          font-family:raleway
+          }
+          #name {
+          background-image:url(../images/name.jpg);
+          background-repeat:no-repeat;
+          background-position:5px 7px
+          }
+          #email {
+          background-image:url(../images/email.png);
+          background-repeat:no-repeat;
+          background-position:5px 7px
+          }
+          textarea {
+          background-image:url(../images/msg.png);
+          background-repeat:no-repeat;
+          background-position:5px 7px;
+          width:82%;
+          height:95px;
+          padding:10px;
+          resize:none;
+          margin-top:30px;
+          border:1px solid #ccc;
+          padding-left:40px;
+          font-size:16px;
+          font-family:raleway;
+          margin-bottom:30px
+          }
+          #submit {
+          text-decoration:none;
+          width:100%;
+          text-align:center;
+          display:block;
+          background-color:#FFBC00;
+          color:#fff;
+          border:1px solid #FFCB00;
+          padding:10px 0;
+          font-size:20px;
+          cursor:pointer;
+          border-radius:5px
+          }
+          span {
+          color:red;
+          font-weight:700
+          }
+        
+        </style>
 </head>
 
 <body>
     
+    <div style="background-color: black">
     
-     <img class="image" width="100%"  src="/images/intro2.gif">
     <div class="container">
     <header class="header">
 		<h1 class="logo"> <img width="65px" src="/images/Automation.png"></h1>
@@ -25,24 +217,152 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Documentation</a></li>
       </ul>
-	</header> 
+	</header>
+    <div style="padding-top: 4%;">
     <div class="machinIp">
-        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi User !</h3>
+        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi <%= userN %> !</h3>
         <h3 class="machinIp_txt">🔌 Conected With <strong style="color:greenyellow;"><%= mip %></strong> Machine </h3>
     </div>
-    <div style="padding-top: 5%;">
+
+
+<!-- PULL BUTTON FORM -->
+
+    <div id="abc">
+        <!-- Popup Div Starts Here -->
+        <div id="popupContact">
+        <!-- Contact Us Form -->
+        <form action="/img-ser" id="form" method="post" name="form">
+        <img id="close" width="20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnDAh99MMQIE7vsmNrYdNif2nKn_f0fp3iVQ&usqp=CAU" onclick ="div_hide()">
+        
+        <h2 style="color: black">Docker Image</h2>
+        <input  name="dockerimagename" placeholder="Enter the Image Name with version" autocomplete="off" type="text">
+        <br>  
+        <!-- onclick="div_hide()" -->
+        <input type="hidden" value="pull" name="subSer">
+        <button class="btn fourth" style="background-color: black;"  width="100px" type="submit">Submit</button>
+        </form>
+        </div>
+        <!-- Popup Div Ends Here -->
+      </div>
+
+      <!-- PUSH BUTTON FORM -->
+
+      <div id="abcd">
+        <!-- Popup Div Starts Here -->
+        <div id="popupContact">
+        <!-- Contact Us Form -->
+        <form action="/img-ser" id="form" method="post" name="form">
+        <img id="close" width="20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnDAh99MMQIE7vsmNrYdNif2nKn_f0fp3iVQ&usqp=CAU" onclick ="div_hide1()">
+        
+        <h2 style="color: black">DockerHub Username</h2>
+        <input  name="username" placeholder="Enter the Username" type="text">
+        <br>
+        <h2 style="color: black">DockerHub Password</h2>
+        <input  name="pass" placeholder="Enter the Password" type="text">
+        <br>
+        <h2 style="color: black">Docker Version of Image</h2>
+        <input  name="ver" placeholder="Enter the Version of Image" type="text">
+        <br>
+        <h2 style="color: black">Docker Image</h2>
+        <input  name="imgname" placeholder="Enter the Image Name" type="text">
+        <br>
+        <button class="btn fourth" style="background-color: black;" onclick="div_hide1()" width="100px" type="submit">Submit</button>
+        </form>
+        </div>
+        <!-- Popup Div Ends Here -->
+      </div>
+
+<!-- REMOVE IMAGE BY ID FORM  -->
+
+    <div id="abcde">
+        <!-- Popup Div Starts Here -->
+        <div id="popupContact">
+        <!-- Contact Us Form -->
+        <form action="/img-ser" id="form" method="post" name="form">
+        <img id="close" width="20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnDAh99MMQIE7vsmNrYdNif2nKn_f0fp3iVQ&usqp=CAU" onclick ="div_hide2()">
+        
+        <h2 style="color: black">Docker Image Id</h2>
+        <input  name="imgid" placeholder="Enter the Image Id" type="text">
+        <br>
+        <input type="hidden" name="subSer" value="rmbyid">
+        <button class="btn fourth" style="background-color: black;" onclick="div_hide2()" width="100px" type="submit">Submit</button>
+        </form>
+        </div>
+   <!-- Popup Div Ends Here -->
+      </div>
+
+<!-- IMAGE HISTORY BUTTON -->
+      <div id="abcdef">
+        <!-- Popup Div Starts Here -->
+        <div id="popupContact">
+        <!-- Contact Us Form -->
+        <form action="/img-ser" id="form" method="post" name="form">
+        <img id="close" width="20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnDAh99MMQIE7vsmNrYdNif2nKn_f0fp3iVQ&usqp=CAU" onclick ="div_hide3()">
+        
+        <h2 style="color: black">Docker Image Id</h2>
+        <input  name="imgid" placeholder="Enter the Image Id" type="text">
+        <br>
+        <input name="subSer" value="hist" type="hidden">
+        <button class="btn fourth" style="background-color: black;" onclick="div_hide3()" width="100px" type="submit">Submit</button>
+        </form>
+        </div>
+        <!-- Popup Div Ends Here -->
+      </div>
+
+<!-- Inspect Button -->
+      <div id="abcdefg">
+        <!-- Popup Div Starts Here -->
+        <div id="popupContact">
+        <!-- Contact Us Form -->
+        <form action="/img-ser" id="form" method="post" name="form">
+        <img id="close" width="20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnDAh99MMQIE7vsmNrYdNif2nKn_f0fp3iVQ&usqp=CAU" onclick ="div_hide4()">
+        
+        <h2 style="color: black">Docker Image Id</h2>
+        <input  name="imgid" placeholder="Enter the Image Id" type="text">
+        <br>
+        <input name="subSer" value="insp" type="hidden">
+        <button class="btn fourth" style="background-color: black;" onclick="div_hide4()" width="100px" type="submit">Submit</button>
+        </form>
+        </div>
+        <!-- Popup Div Ends Here -->
+      </div>
+  
+  
+      <div style="padding-top: 5%;">
       
         <div class="row_float">
-            <a  href="/pages/option.html" ><button style="padding-right: 80%;" class="btn fourth bold_btn">Pull</button></a>
-            <a  href="/pages/option.html" ><button style="padding-right: 80%;" class="btn fourth">Push</button></a>
-            <a  href="/pages/option.html" ><button style="padding-right: 58%;" class="btn fourth">List Images</button></a>
-            <a  href="/pages/option.html" ><button style="padding-right: 32%;" class="btn fourth">Remove Image By ID</button></a>
-            <a  href="/pages/new.html" ><button style="padding-right: 48%;" class="btn fourth">Image History</button></a>
-            <a  href="/pages/new.html" ><button style="padding-right: 48%;" class="btn fourth">Image Inspect</button></a>
+            <button class="btn fourth" id="popup" onclick="div_show()">Pull</button>
+            <br>
+            <button class="btn fourth" id="popup" onclick="div_show1()">Push</button>
+            <br>
+            
+            <form action="/img-ser" method="POST" style="background: transparent; border: none; width: 0%">
+                
+              <input type="hidden" value="list" name="subSer">
+              <button class="btn fourth" type="submit"> 
+                  List
+               </button>
+           </form>
+
+
+          
+            <br>
+            <button class="btn fourth" id="popup" onclick="div_show2()">Remove Image by Id</button>
+            <br>
+            <button class="btn fourth" id="popup" onclick="div_show3()">Image History</button>
+            <br>
+            <button class="btn fourth" id="popup" onclick="div_show4()">Image Inspect</button>
         </div>
         <div class="container1">
             <h3>Console</h3>
+            <h5>
+              <pre>
+              <%= data %>
+            </pre>
+            </h5>
         </div>
+    </div>
+</div>
     </div>
 </body>
 
