--- a/views/vol_ser.ejs
+++ b/views/vol_ser.ejs
@@ -16,7 +16,7 @@
 <body>
     
     
-     <img class="image" width="100%"  src="/images/intro2.gif">
+     <div style="background-color: black;">
     <div class="container">
     <header class="header">
 		<h1 class="logo"> <img width="65px" src="/images/Automation.png"></h1>
@@ -26,8 +26,9 @@
           <li><a href="#">Documentation</a></li>
       </ul>
 	</header> 
+    <div style="padding-top: 4%;">
     <div class="machinIp">
-        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi User !</h3>
+        <h3 style="float: left; padding-left: 10%;">  <img width="30px" src="/images/user2.png"> Hi <%= userN %>!</h3>
         <h3 class="machinIp_txt">🔌 Conected With <strong style="color:greenyellow;"><%= mip %></strong> Machine </h3>
     </div>
     <div style="padding-top: 5%;">
@@ -43,6 +44,8 @@
             <h3>Console</h3>
         </div>
     </div>
+</div>
+</div>
 </body>
 
 </html>
